--- a/slides/_common.qmd
+++ b/slides/_common.qmd
@@ -3,6 +3,6 @@
 #| message: false
 #| warning: false
 library(tidyverse)
-theme_set(theme_minimal())
+theme_set(theme_minimal(base_size = 10))
 options(width = 50)
 ```
