--- a/index.qmd
+++ b/index.qmd
@@ -50,14 +50,15 @@ for you to solve independently at your own pace.
 - **Exercises:**
   [1-3 (Section 24.4.3, AdvR)](https://adv-r.hadley.nz/perf-improve.html#exercises-71)
 
-<!-- #### Exercise Session 2
-- **Main topic**: Functional Programming vs OOP (+ Currying/Function Factories)
-- In class walkthrough: A.8-A.12 (CSwR, Appendix A) and exercises 2.1-2.6 (CSwR,
-  Chapter 2) -->
+#### Exercise Session 2
+- **Main topic**: Using AI propperly, memory usage and benchmarking
+- **In class walkthrough:** Exercises 2.1-2.6 (CSwR,
+  Chapter 2)
+- **Solutions**: TBA
+- **Mini-slides**: TBA
 
 #### Lecture 4: Scatterplot Smoothing
-
-<!-- - **Slides:** [Scatterplot Smoothing](slides/lecture4.pdf) -->
+- **Slides:** [Scatterplot Smoothing](slides/lecture4.pdf)
 - **Reading:** [Chapter 3 (CSwR)](https://cswr.nrhstat.org/bivariate.html)
 - **Exercises:**
   [3.4 (CSwR, Chapter 3)](https://cswr.nrhstat.org/bivariate#bivariate:ex)
